--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script src="/src/js/script.js"></script>
+    <script src="/src/js/script-toggle.js"></script>
     <title>Dently</title>
 </head>
 <body class="bg-backgroundWhite">
     <!--Hero Section-->
-    <div class=" flex bg-backgroundGreen rounded-b-md w-full h-screen">
-        <div class="w-[90%] max-w-[1440px] mx-auto mb-10 ">
+    <div class=" flex bg-backgroundGreen rounded-b-xl w-full h-screen">
+        <div class="w-[90%] max-w-[1920px] mx-auto mb-10 ">
 
             <div class="flex flex-row justify-between">
                 <div class="mt-6" id="logo">
@@ -48,7 +49,7 @@
                 </div> 
             </div>
 
-            <div class="flex flex-col lg:flex-row justify-center items-center h-[90%]">
+            <div class="flex flex-col lg:flex-row justify-center items-center h-[90%] max-w-[1440px] mx-auto">
                 <div class="flex justify-center mb-10">
                     <img src="/src/img/hero-icon.png" alt="" class="lg:hidden">
                     <div class="hidden lg:flex">
@@ -73,4 +74,128 @@
         </div>
 
     </div>
+
+    <!--Info Section-->
+    <div class="flex flex-wrap w-[95%] gap-16 max-w-[1440px] justify-center mx-auto mt-28">
+        <!--First Div-->
+        <div class="flex flex-col w-full max-w-[400px] xl:max-w-[500px] 2xl:max-w-[600px]">
+            <div class="w-full bg-backgroundWhite relative">
+                <div class="flex justify-center bg-backgroundGreen rounded-xl">
+                    <img src="/src/img/person.png" class="-mt-12" alt="">
+                </div>
+            </div>
+            <h1 class="font-headers text-2xl md:text-3xl lg:text-4xl font-bold text-backgroundGreen text-center w-3/4 mx-auto mt-4">Expertos en blanqueamiento dental</h1>
+        </div>
+        <!--Second Div-->
+        <div class="flex flex-col w-full max-w-[400px] xl:max-w-[500px] 2xl:max-w-[600px]">
+            <div class="w-full bg-backgroundWhite relative">
+                <div class="flex justify-center bg-backgroundGreen rounded-xl">
+                    <img src="/src/img/person-1.png" class="-mt-12" alt="">
+                </div>
+            </div>
+            <h1 class="font-headers text-2xl md:text-3xl lg:text-4xl font-bold text-backgroundGreen text-center w-3/4 mx-auto mt-4">Especialistas en implantes dentales</h1>
+        </div>
+        <!--Third Div-->
+        <div class="bg-blue w-full max-w-[400px] lg:w-1/2 rounded-lg flex flex-col items-center justify-center h-60 xl:max-w-[500px] 2xl:max-w-[600px]">
+            <h1 class="font-headers font-bold text-2xl md:text-3xl lg:text-4xl text-backgroundWhite text-center">Descubre</h1>
+            <pa class="font-paragraphs text-backgroundWhite text-lg lg:text-xl= text-center w-3/4">Lo que  podemos hacer por tu salud bucal y la de tu familia.</pa>
+        </div>
+        <!--Fourth Div-->
+        <div class="bg-backgroundGreen w-full max-w-[400px] lg:w-1/2 rounded-lg xl:max-w-[500px] 2xl:max-w-[600px]">
+            <h1 class="font-headers font-bold text-backgroundWhite text-3xl text-center mt-10 mb-3">Tenemos especialistas en</h1>
+            <ul class="mb-10 text-center text-lg text-backgroundWhite">
+                <li>Endodoncia</li>
+                <li>Periodoncia</li>
+                <li>Ortodoncia</li>
+                <li>Rehabilitación bucal</li>
+                <li>Odontopediatría</li>
+                <li>Cirugía bucal</li>
+                <li>Odontología estética</li>
+                <li>Cirugía maxilofacial</li>
+                <li>Cosmetología dental</li>
+                <li>Implantologia</li>
+            </ul>
+        </div>
+    </div>
+    <!--Info 2-->
+
+    <div class="flex flex-col items-center lg:flex-row w-[95%] mx-auto max-w-[600px] lg:max-w-[1270px] rounded-lg mt-28 mb-28 bg-backgroundGreen">
+        <img src="/src/img/blanqueamiento-dental.jpg" class="rounded-t-lg w-full max-w-[600px]" alt="">
+        <div class="bg-backgroundGreen w-full flex flex-col rounded-lg">
+            <h1 class="mt-5 font-bold font-headers text-3xl text-backgroundWhite text-center">Blanqueamiento Dental desde:</h1>
+            <h1 class="mt-5 mb-10 font-bold font-headers text-3xl text-backgroundWhite text-center" >$1,000 mxn</h1>
+            <a href="" class="bg-backgroundWhite py-3 rounded-lg w-[80%] max-w-[500px] text-center text-backgroundGreen font-headers font-bold text-3xl mx-auto mb-5">Agenda tu cita</a>
+        </div>
+    </div>
+
+    
+    <!--Contact Section-->
+    <div class="bg-backgroundGreen w-full rounded-xl gap-3 mx-auto">
+        <div class="max-w-[1440px] flex flex-col gap-3 mt-10 mx-auto">
+            <h1 class="font-headers text-2xl md:text-3xl lg:text-4xl text-backgroundWhite font-bold text-center mt-20">Agendar tu cita</h1>
+            <p class="text-center font-paragraphs text-base text-backgroundWhite">Puedes hacerlo por los siguientes medios</p>
+            <div class="flex flex-col w-full mx-auto gap-3">
+                <a href="" class="py-3 w-[80%] max-w-[500px] bg-backgroundWhite text-center mx-auto rounded-xl text-backgroundGreen font-headers text-3xl font-bold">Calendly</a>
+                <a href="" class="py-3 w-[80%] max-w-[500px] bg-backgroundWhite text-center mx-auto rounded-xl text-backgroundGreen font-headers text-3xl font-bold">WhatsApp</a>
+            </div>
+            <h1 class="text-backgroundWhite font-paragraphs text-center ">A traves de nuestros numeros de telefono:</h1>
+            <h1 class="text-backgroundWhite font-headers text-center font-bold mb-20">656-234-6677-20</h1>
+        </div>
+
+    </div>
+
+    <!--FAQ Section-->
+    <div class="flex flex-col w-[95%] mt-28 mx-auto cursor-pointer">
+        <!--Horarios-->
+        <div id="hours" class="cursor-pointer flex flex-row items-center justify-between bg-backgroundGreen rounded-xl w-full max-w-[1270px] mx-auto">
+            <img id="arrow-hours" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Nuestros horarios</h1>
+            <div class="text-backgroundGreen">.</div>
+        </div>
+        <!--Div to show-->
+        <div id="hours-div" class="mx-auto -mt-2 bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] transition duration-300 ease-in-out hidden">
+            <h1 class="text-center mt-14">Lunes a Viernes</h1>
+            <h1 class="text-center mb-14">9:00 am 6:00 pm</h1>
+        </div>
+
+        <!--Ubicacion-->
+        <div id="ubication" class="flex flex-row items-center justify-between bg-backgroundGreen rounded-xl w-full max-w-[1270px] mx-auto mt-5">
+            <img id="arrow-ubication" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Ubicacion</h1>
+            <div class="text-backgroundGreen">.</div>
+        </div>
+        <!--Div to show-->
+        <div id="ubication-div" class="mx-auto bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] faq-item faq-answer -mt-2 hidden">
+            <h1 class="text-center mt-14">Calle Loremp Ipsum</h1>
+            <h1 class="text-center mb-14">Numero 129</h1>
+        </div>
+        <!--Metodos de pago-->
+        <div id="pay" class="flex flex-row items-center justify-between bg-backgroundGreen rounded-xl w-full max-w-[1270px] mx-auto mt-5">
+            <img id="arrow-pay" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Metodos de pago</h1>
+            <div class="text-backgroundGreen">.</div>
+        </div>
+        <!--Div to show-->
+        <div id="pay-div" class="mx-auto bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] faq-item faq-answer -mt-2 hidden">
+            <h1 class="text-center mt-14">Oxxo, PayPal, Bitso</h1>
+            <h1 class="text-center mb-14">Spei, Binance, Efectivo</h1>
+            
+        </div>
+    </div>
+
+    <!--Footer-->
+    <div class="w-full bg-backgroundGreen mt-28 rounded-t-xl">
+        <div class="flex flex-col  md:flex-row md:justify-between w-[90%] max-w-[1920px] mx-auto mt-10">
+            <div class="flex flex-col mt-10 md:mx-0 mx-auto">
+                <img src="/src/img/logo.svg" class="size-16 md:size-28 mx-auto md:mx-0" alt="logo">
+                <p class="font-paragraphs text-backgroundWhite md:text-left text-center ml-3">Disenado y desarrollado por:</p>
+                <h1 class="font-headers text-backgroundWhite font-bold md:text-left text-center ml-3 mb-3">GROWY</h1>
+            </div>
+            <div class="flex flex-row gap-3 mx-auto md:mx-0 mb-10 mt-3 md:mt-10">
+                <img src="/src/img/facebook-icon.svg" class="md:size-10" alt="">
+                <img src="/src/img/instagram-icon.svg" class="md:size-10" alt="">
+            </div>
+        </div>
+    </div>
+</body>
 </html>
