--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
             <div class="flex flex-row justify-between">
                 <div class="mt-6" id="logo">
-                    <img src="/public/img/logo.svg" alt="">
+                    <img src="./img/logo.svg" alt="">
                 </div>
             
             <!--NavBar | Desktop-->
