--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <script src="/public/js/script.js"></script>
-    <script src="/public/js/script-toggle.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/script-toggle.js"></script>
     <title>Dently</title>
 </head>
 <body class="bg-backgroundWhite">
@@ -44,20 +44,20 @@
                     <a href="#section-date" id="date-btn" class="font-bold text-lg">Agendar cita</a>
                 </div>
                 <div class="" id="close-icon">
-                    <img src="/src/img/close-icon.svg" alt="" class="size-12" >
+                    <img src="./img/close-icon.svg" alt="" class="size-12" >
                 </div>
             </div>
 
                 <div class="mt-6 lg:hidden" id="menu-icon">
-                    <img src="/public/img/menu-icon-material.svg" class="size-12" alt="">
+                    <img src="./img/menu-icon-material.svg" class="size-12" alt="">
                 </div> 
             </div>
 
             <div class="flex flex-col lg:flex-row justify-center items-center h-[90%] max-w-[1440px] mx-auto">
                 <div class="flex justify-center mb-10">
-                    <img src="/public/img/hero-icon.png" alt="" class="lg:hidden">
+                    <img src="./img/hero-icon.png" alt="" class="lg:hidden">
                     <div class="hidden lg:flex">
-                        <img src="/public/img/hero-icon-desktop.png" class="" alt="">
+                        <img src="./img/hero-icon-desktop.png" class="" alt="">
                     </div>
                 </div>
                 <div>
@@ -85,7 +85,7 @@
         <div class="flex flex-col w-full max-w-[400px] xl:max-w-[500px] 2xl:max-w-[600px]">
             <div class="w-full bg-backgroundWhite relative">
                 <div class="flex justify-center bg-backgroundGreen rounded-xl">
-                    <img src="/public/img/person.png" class="-mt-12 img-png" alt="">
+                    <img src="./img/person.png" class="-mt-12 img-png" alt="">
                 </div>
             </div>
             <h1 class="font-headers text-2xl md:text-3xl lg:text-4xl font-bold text-backgroundGreen text-center w-3/4 mx-auto mt-4">Expertos en blanqueamiento dental</h1>
@@ -94,7 +94,7 @@
         <div class="flex flex-col w-full max-w-[400px] xl:max-w-[500px] 2xl:max-w-[600px]">
             <div class="w-full bg-backgroundWhite relative">
                 <div class="flex justify-center bg-backgroundGreen rounded-xl">
-                    <img src="/public/img/person-1.png" class="-mt-12 img-png" alt="">
+                    <img src="./img/person-1.png" class="-mt-12 img-png" alt="">
                 </div>
             </div>
             <h1 class="font-headers text-2xl md:text-3xl lg:text-4xl font-bold text-backgroundGreen text-center w-3/4 mx-auto mt-4">Especialistas en implantes dentales</h1>
@@ -124,7 +124,7 @@
     <!--Info 2-->
 
     <div class="flex flex-col items-center lg:flex-row w-[95%] mx-auto max-w-[600px] lg:max-w-[1270px] rounded-lg mt-28 mb-28 bg-backgroundGreen">
-        <img src="/src/img/blanqueamiento-dental.jpg" class="rounded-t-lg w-full max-w-[600px] img-png" alt="">
+        <img src="./img/blanqueamiento-dental.jpg" class="rounded-t-lg w-full max-w-[600px] img-png" alt="">
         <div class="bg-backgroundGreen w-full flex flex-col rounded-lg">
             <h1 class="mt-5 font-bold font-headers text-3xl text-backgroundWhite text-center">Blanqueamiento Dental desde:</h1>
             <h1 class="mt-5 mb-10 font-bold font-headers text-3xl text-backgroundWhite text-center" >$1,000 mxn</h1>
@@ -179,7 +179,7 @@
         <!--Div to show-->
         <div id="ubication-div" class="mx-auto bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] faq-item faq-answer -mt-2 hidden">
             <div class="flex flex-row items-center justify-between">
-                <img id="arrow-hours" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
+                <img id="arrow-hours" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
                 <div class="flex flex-col mx-auto md:mx-auto">
                     <h1 class="text-center mt-14 font-bold font-paragraphs">Calle Loremp Ipsum</h1>
                     <h1 class="text-center mb-3 font-paragraphs">Numero 129</h1>
@@ -190,14 +190,14 @@
         </div>
         <!--Metodos de pago-->
         <div id="pay" class="flex flex-row items-center justify-between bg-backgroundGreen rounded-xl w-full max-w-[1270px] mx-auto mt-5">
-            <img id="arrow-pay" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <img id="arrow-pay" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
             <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Metodos de pago</h1>
             <div class="text-backgroundGreen">.</div>
         </div>
         <!--Div to show-->
         <div id="pay-div" class="mx-auto bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] faq-item faq-answer -mt-2 hidden">
             <div class="flex flex-row items-center justify-between">
-                <img id="arrow-hours" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
+                <img id="arrow-hours" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
                 <div class="flex flex-col mx-auto md:mx-auto">
                     <h1 class="text-center mt-14 font-paragraphs">Oxxo, PayPal, Bitso</h1>
                     <h1 class="text-center mb-14 font-paragraphs">Spei, Binance, Efectivo</h1>
@@ -210,7 +210,7 @@
     <!--Growy Section-->
     <div class="flex flex-col bg-backgroundGreen w-full rounded-xl">
         <div class="flex flex-row max-w-60 mx-auto mt-16">
-            <img src="/src/img/growy-white.svg"  class="size-20" alt="">
+            <img src="./img/growy-white.svg"  class="size-20" alt="">
             <h1 class="font-growy font-black text-4xl mt-6 text-white">Growy</h1>
         </div>
         <p class="max-w-96 mx-auto text-center font-paragraphs text-white">¿Te preguntas qué puede hacer Growy? Dently es un ejemplo de sitio web creado por nosotros. Descubre cómo puedes tener un sitio así.</p>
@@ -221,16 +221,16 @@
     <div class="w-full bg-backgroundGreen mt-28 rounded-t-xl">
         <div class="flex flex-col  md:flex-row md:justify-between w-[90%] max-w-[1920px] mx-auto mt-10">
             <div class="flex flex-col mt-10 md:mx-0 mx-auto">
-                <img src="/src/img/logo.svg" class="size-16 md:size-28 mx-auto md:mx-0" alt="logo">
+                <img src="./img/logo.svg" class="size-16 md:size-28 mx-auto md:mx-0" alt="logo">
                 <p class="font-paragraphs text-backgroundWhite md:text-left text-center ml-3">Disenado y desarrollado por:</p>
                 <h1 class="font-headers text-backgroundWhite font-bold md:text-left text-center ml-3 mb-3">GROWY</h1>
             </div>
             <div class="flex flex-row gap-3 mx-auto md:mx-0 mb-10 mt-3 md:mt-10">
                 <a href="https://www.facebook.com/profile.php?id=61571831915265">
-                    <img src="/src/img/facebook-icon.svg" class="md:size-10" alt="">
+                    <img src="./img/facebook-icon.svg" class="md:size-10" alt="">
                 </a>
                 <a href="">
-                    <img src="/src/img/instagram-icon.svg" class="md:size-10" alt="">
+                    <img src="./img/instagram-icon.svg" class="md:size-10" alt="">
                 </a>
             </div>
         </div>
