--- a/public/index.html
+++ b/public/index.html
@@ -152,14 +152,14 @@
     <div class="flex flex-col w-[95%] mt-28 mb-28 mx-auto cursor-pointer" id="section-info">
         <!--Horarios-->
         <div id="hours" class="cursor-pointer flex flex-row items-center justify-between bg-backgroundGreen rounded-xl w-full max-w-[1270px] mx-auto">
-            <img id="arrow-hours" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <img id="arrow-hours" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
             <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Nuestros horarios</h1>
             <div class="text-backgroundGreen">.</div>
         </div>
         <!--Div to show-->
         <div id="hours-div" class="mx-auto -mt-2 bg-backgroundWhite border-2 border-backgroundGreen w-full max-w-[1270px] transition duration-300 ease-in-out hidden">
             <div class="flex flex-row items-center justify-between ">
-                <img id="arrow-hours" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
+                <img id="arrow-hours" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2 hidden md:flex" alt="">
                 <div class="flex flex-col mx-auto md:mx-auto">
                     <h1 class="text-center font-bold font-paragraphs mt-14">Lunes a Viernes</h1>
                     <h1 class="text-center font-paragraphs">9:00 am - 6:00 pm</h1>
@@ -172,7 +172,7 @@
 
         <!--Ubicacion-->
         <div id="ubication" class="flex flex-row items-center justify-between bg-backgroundGreen  rounded-xl w-full max-w-[1270px] mx-auto mt-5">
-            <img id="arrow-ubication" src="/src/img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
+            <img id="arrow-ubication" src="./img/arrow.png" class="size-10 object-contain ml-3 my-2" alt="">
             <h1 class="text-2xl font-headers text-backgroundWhite font-bold faq-item faq-question">Ubicacion</h1>
             <div class="text-backgroundGreen">.</div>
         </div>
